// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor plugins replace-empty-element given AsyncAPI definition with no empty values should do nothing 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (JsonSchemaDialectElement)))
`;

exports[`refractor plugins replace-empty-element given OpenAPI definition with no empty values should do nothing 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (JsonSchemaDialectElement)))
`;

exports[`refractor plugins replace-empty-element given empty value instead for OpenAPI.components.schemas should replace empty value with semantic element 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement)))))
`;

exports[`refractor plugins replace-empty-element given empty value instead for OpenAPI.components.schemas.* should replace empty value with semantic element 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (SchemaElement)))))))
`;

exports[`refractor plugins replace-empty-element given empty value instead of ContactElement should replace empty value with semantic element 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (ContactElement)))))
`;

exports[`refractor plugins replace-empty-element given empty value instead of InfoElement should replace empty value with semantic element 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement)))
`;
